  All default options are now part of the class itself (where possible)
  and can be customised by using ``options``.
  [davidjb]

- Widgets now accept an ``item_css_class`` argument.  This argument, when
  provided, sets a class value on the top level element of the item template
  which surrounds the widget (usually an <li>).

Bug Fixes
~~~~~~~~~

- Trigger a change event when adding/removing sequence items.

- Add optional label to checkbox widget.

- Raise a ValueError exception when the prototype
  for a field in a sequence has no name. See
  https://github.com/Pylons/deform/issues/149

0.9.7 (2013-03-06)
------------------

Bug Fixes
~~~~~~~~~

- Readonly checkbox template had a logic error.

Documentation
~~~~~~~~~~~~~

- Corrected the expected server response when using the Autocomplete widget.

0.9.6 (2013-01-10)
------------------

Bug Fixes
~~~~~~~~~

- Fixed remove bug in nested sequences.  See
  https://github.com/Pylons/deform/pull/89

- Fixed bug wherein items added to a sequence nor the initial items rendered
  in a sequence would not reflect the correct defaults of the item widget.
  See https://github.com/Pylons/deform/pull/79

- Fix bug where native datetime/date widget rendering competed with jQuery
  datetime/date widget rendering.  See
  https://github.com/Pylons/deform/pull/142

Dependencies
~~~~~~~~~~~~

- Depend on and use zope.deprecation to deprecate Set class.

- Deform now depends on Colander >= 1.0a1 (previously it depended on >= 0.8).
  It requires Colander 1.0a1's newer ``cstruct_children`` and
  ``appstruct_children`` methods of schema objects as well as being able to
  import objects from Colander that don't exist in earlier versions.

- Deform now depends on Chameleon >= 2.5.1 (previously it depended on
  >= 1.2.3).  It requires the Markup class supplied by this version or better.

- Deform no longer has a setup_requires dependency on setuptools_git
  (useless, as the version on PyPI is broken).
