@@ -31,12 +31,12 @@ def text_(s, encoding='latin-1', errors='strict'):
         return s.decode(encoding, errors)
     return s # pragma: no cover
 
-def bytes_(s, encoding='latin-1', errors='strict'):
+def bytes_(s, encoding='latin-1', errors='strict'): 
     """ If ``s`` is an instance of ``text_type``, return
     ``s.encode(encoding, errors)``, otherwise return ``s``"""
     if isinstance(s, text_type): # pragma: no cover
         return s.encode(encoding, errors)
-    return s
+    return s # pragma: no cover
 
 
 try:
