@@ -14,6 +14,9 @@ Features
   provided, sets a class value on the top level element of the item template
   which surrounds the widget (usually an <li>).
 
+- DateTime widget now handles stripping timezones from ISO-formatted strings
+  that include microseconds.  Previously it would just choke.
+
 Bug Fixes
 ~~~~~~~~~
 
